[Modified] index woring

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-xs-12 col-md-12 text-center">
-          v1.0 Powered by Charlieeeeee with ♡
+          v0.1 Beta Powered by OPASS TEAM
         </div>
       </div>
     </div>
