--- a/templates/submit.html
+++ b/templates/submit.html
@@ -14,6 +14,9 @@
     <meta property="og:image" content="static/imgs/Banner.png" />
     <meta property="og:site_name" content="{{head.title}}"/>
     <link rel="shortcut icon" href="static/imgs/icon.png" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="static/css/stylesheets/bootstrap.min.css">
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="static/css/stylesheets/materialize.min.css">
     <!-- Custom CSS -->
@@ -25,6 +28,8 @@
     <!-- Jquery -->
     <script src="static/js/libs/jquery.js"></script>
     <script src="static/js/libs/js.cookie.js"></script>
+    <!-- Bootstrap js -->
+    <script src="static/js/libs/bootstrap.min.js"></script>
     <!-- Materialize js -->
     <script src="static/js/libs/materialize.min.js"></script>
     <!-- Vue -->
