The new version of project today

--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -1,7 +1,7 @@
 
 
 body{
-  background-color:#121212; color: #ffffff; font-size: 1.7rem; letter-spacing: 3px;
+  background-color: brown; color: #ffffff; font-size: 1.7rem; letter-spacing: 3px;
 }
 
 a{color: white; text-decoration: underline;}
