--- a/templates/submit.html
+++ b/templates/submit.html
@@ -24,6 +24,17 @@
 </head>
 
 <body>
+    <div id="main">
+        <div class="container">
+            <h1>Opass</h1>
+            <form></form>
+        </div>
+
+        <div class="container">
+            <h2>填寫新的課程評價</h2>
+            <form></form>
+        </div>
+    </div>
 
     <!-- Jquery -->
     <script src="static/js/libs/jquery.js"></script>
