Commiting for merging with dev

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -25,12 +25,14 @@
 
 <body>
     <div id="main">
-        <div class="container">
+        <div id="main-left" class="container">
             <h1>Opass</h1>
-            <form></form>
+            <form>
+                <input type="text">
+            </form>
         </div>
 
-        <div class="container">
+        <div id="main-right" class="container">
             <h2>填寫新的課程評價</h2>
             <form></form>
         </div>
