[Modified] submit.html
1.  [修正] 修正無法垂直捲動的問題
2.  [調整] 調整左右欄位高度的問題 (在script.js / init 時自動平衡兩側的高度)
3. [調整] 調整右側表單 radio 樣式 (複寫 materializecss 的樣式)

--- a/static/css/sass/style.scss
+++ b/static/css/sass/style.scss
@@ -1,9 +1,9 @@
 @import "submit";
 
 body {
-  font-size: 1.7rem;
-  letter-spacing: 3px;
-  overflow-y: hidden;
+  font-size: 1.0rem;
+  letter-spacing: 2px;
+  overflow-x: hidden;
 }
 
 a {
