--- a/static/css/sass/_submit.scss
+++ b/static/css/sass/_submit.scss
@@ -17,7 +17,7 @@ color: $placeholder-color;
 
 /* 左邊區塊 */
 #main-left {
-    height: $window-height;
+    min-height: $window-height;
     background-color: orange;
     color: black;
 
@@ -32,12 +32,14 @@ color: $placeholder-color;
 
     label {
         color: grey;
-        font-size: 16px;
+        /*font-size: 16px;*/
     }
 
+    /*
     label.input-text-title {
         font-size: 20px;
     }
+    */
 
     /* radio button的標題 */
     .radio-title {
@@ -71,7 +73,7 @@ color: $placeholder-color;
 
 /* 右邊區塊 */
 #main-right {
-    height: $window-height;
+    min-height: $window-height;
     background-color: white;
     color: black;
 
@@ -79,4 +81,58 @@ color: $placeholder-color;
     label {
         color: black;
     }
+
+    /* radio button 客製化 ( 讓數值在圓圈中央 ) */
+    /* edit by Charlie 20170908 */
+    $radio-size:1.7rem;
+    .radio-title {
+        font-size: 1.1rem;
+    }
+    .radio-p {
+        height: 1.85rem;
+        line-height: 1.9rem;
+    }
+
+
+    [type="radio"]:not(:checked) + label, [type="radio"]:checked + label{
+        padding-left: 10px;
+        padding-top: 2px;
+        margin-left: 1.5rem;
+        margin-top: 0px;
+    }
+    [type="radio"] + label::before, [type="radio"] + label::after {
+        width: $radio-size;
+        height: $radio-size;
+        margin: 0;
+    }
+
+    [type="radio"]:checked + label , [type="radio"]:not(:checked) + label  {
+        background-color: #26a69a;
+        color:white;
+        width: $radio-size;
+        height: $radio-size;
+        line-height: $radio-size;
+        border-radius: 50%;
+        padding-left: 1px;
+        padding-top: 1px;
+        text-align: center;
+        margin-left: 1.8rem;
+    }
+
+
+    [type="radio"]:not(:checked) + label {
+        background-color: white;
+        color:black;
+    }
+
+    [type="radio"]:checked + label::after {
+      /*  -webkit-transform:scale(0);
+        transform:scale(0);*/
+        opacity: 0;
+    }
+
+    .radio-right-title {
+        margin-left: 1.5rem;
+    }
+
 }
